--- a/internship.html
+++ b/internship.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -117,7 +117,7 @@
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -133,11 +133,11 @@
 <p><span class="badge badge-light">Atlanta Atlanta Atlanta Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -149,7 +149,7 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nycedc/job/olUBafwK'>NYCEDC Careers - Fall Internship - Development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nycedc/job/olUBafwK'>NYCEDC Careers - Fall Internship - Development</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -195,7 +195,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/uEVyBvPr0O/Partnership-Intern'>Partnership Intern - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/uEVyBvPr0O/Partnership-Intern'>Partnership Intern - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -308,7 +308,7 @@ organizational projects and initiatives.Key ResponsibilitiesAssists in.....</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medecinssansfrontieressuisse.recruitee.com/o/communications-advocacy-intern-geneve'>
+<h5><a href='https://medecinssansfrontieressuisse.recruitee.com/o/communications-advocacy-intern-geneve'>
       Communications & Advocacy Intern - M?decins Sans Fronti?res Suisse
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -408,7 +408,7 @@ that?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oDPvafwR'>Internet Brands Careers - Java Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oDPvafwR'>Internet Brands Careers - Java Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
